# educational_project

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: users.json
mysite/mysite/: settings.py
