[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["vovka <vovka1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^4.4.6"
gunicorn = "^23.0.0"
django-filter = "^24.3"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
